refactor: List 타입에서 Page타입으로 반환타입 변경