@@ -3,15 +3,17 @@ package com.halfgallon.withcon.domain.performance.service.impl;
 import com.halfgallon.withcon.domain.performance.dto.request.PerformanceRequest;
 import com.halfgallon.withcon.domain.performance.dto.response.PerformanceResponse;
 import com.halfgallon.withcon.domain.performance.entitiy.Performance;
-import com.halfgallon.withcon.domain.performance.entitiy.QPerformance;
-import com.halfgallon.withcon.domain.performance.entitiy.QPerformanceDetail;
 import com.halfgallon.withcon.domain.performance.repository.PerformanceRepository;
 import com.halfgallon.withcon.domain.performance.service.PerformanceService;
 import com.halfgallon.withcon.global.exception.CustomException;
 import com.halfgallon.withcon.global.exception.ErrorCode;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -58,8 +60,13 @@ public class PerformanceServiceImpl implements PerformanceService {
   }
 
   @Override
-  public List<PerformanceResponse> searchPerformance(String keyword) {
-    return performanceRepository.searchPerformance(keyword)
-        .stream().map(PerformanceResponse::fromEntity).toList();
+  public Page<PerformanceResponse> searchPerformance(String keyword, Pageable pageable) {
+    Page<Performance> performancePage = performanceRepository.searchPerformance(keyword, pageable);
+    List<PerformanceResponse> performanceResponseList = performancePage.getContent()
+        .stream()
+        .map(PerformanceResponse::fromEntity)
+        .collect(Collectors.toList());
+
+    return new PageImpl<>(performanceResponseList, pageable, performancePage.getTotalElements());
   }
 }
